# GPU-Matmul

./: CMakeLists.txt  LICENSE  README.md
src/: main.cu
tests/rectangle/: A_large_rect.txt  A_medium_rect.txt  A_small_rect.txt  B_large_rect.txt  B_medium_rect.txt  B_small_rect.txt  C_expected_large_rect.txt  C_expected_medium_rect.txt  C_expected_small_rect.txt  rectangle_tests.md
tests/square/: A_large.txt  A_medium.txt  A_small.txt  B_large.txt  B_medium.txt  B_small.txt  C_expected_large.txt  C_expected_medium.txt  C_expected_small.txt  square_tests.md
